--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-rate-limit": "^6.8.1",
+    "express-winston": "^4.2.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "eslint": "^8.45.0",
